added header icon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src//assets//urlHead.png" />
+    <style>
+      link[rel="icon"] {
+        width: 35px;
+        height: 35px;
+      }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>@sonuJsDev</title>
   </head>
   <body>
     <div id="root"></div>
